fixed margin-bottom for readability

--- a/research/styles.css
+++ b/research/styles.css
@@ -77,7 +77,7 @@ div p {
 }
 
 .content > p {
-    margin-bottom: 50px; /* Adjust as needed */
+    margin-bottom: 60px; /* Adjust as needed */
 }
 
 div h3 {
